@@ -204,7 +204,6 @@ public:
 	virtual void SortFileList(int KeepPosition) override;
 	virtual void SetViewMode(int ViewMode) override;
 	virtual void SetSortMode(panel_sort SortMode, bool KeepOrder = false) override;
-	virtual bool CanDoCustomSort(int SortMode) override;
 	virtual void SetCustomSortMode(int SortMode, bool KeepOrder = false, bool InvertByDefault = false) override;
 	virtual void ChangeSortOrder(bool Reverse) override;
 	virtual void ChangeNumericSort(bool Mode) override;
