@@ -1,4 +1,8 @@
-﻿shmuel 13.03.2016 01:28:38 +0200 - build 565
+﻿shmuel 13.03.2016 21:46:38 +0200 - build 566
+
+1. Уточнение 565.
+
+shmuel 13.03.2016 01:28:38 +0200 - build 565
 
 1. В функции Panel.LoadCustomSortMode таблица параметров может включать в себя опциональное поле
    'Condition' (функцию). Данная функция может использоваться, например, в интерактивном режиме
